k8s/efs-pod.template.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: efs-pod
  namespace: %namespace%
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: efs-pod
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: efs-pod
    spec:
      containers:
      - name: efs-pod
        image: %efs_pod_image%
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: efs-pvc-fargate
          mountPath: /efs
        resources:
          requests:
            memory: "1G"
            cpu: 1
          limits:
            memory: "2G"
            cpu: 2
        imagePullPolicy: Always
      volumes:
        - name: efs-pvc-fargate
          persistentVolumeClaim:
            claimName: efs-storage-fargate-claim
