k8s/presto-server-fargate.template.yaml
---

apiVersion: v1
kind: Service
metadata:
  name: presto
  namespace: %namespace%
spec:
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: presto-coordinator


---


apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: %namespace%
  name: ingress-presto
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 8443}]'
    alb.ingress.kubernetes.io/group.name: presto-coordinator
    alb.ingress.kubernetes.io/subnets: %fargate_subnets%
    alb.ingress.kubernetes.io/inbound-cidrs: %CIDR_BLOCK%
    alb.ingress.kubernetes.io/success-codes: 200,301,302,303
    alb.ingress.kubernetes.io/certificate-arn: %alb_certarn%
spec:
  rules:
    - host: %alb_hostname%
      http:
        paths:
          - path: /*
            backend:
              serviceName: presto
              servicePort: 8080
    

---


apiVersion: apps/v1
kind: Deployment
metadata:
  name: presto-coordinator
  namespace: %namespace%
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: presto-coordinator
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: presto-coordinator
    spec:
      containers:
      - name: presto-coordinator
        image: %presto_image%
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: efs-pvc-fargate
          mountPath: /opt/presto-server/etc/config.properties
          subPath: config.properties.coordinator
        - name: efs-pvc-fargate
          mountPath: /opt/presto-server/etc/jvm.config
          subPath: jvm.config.coordinator
        - name: efs-pvc-fargate
          subPath: tpcds.properties
          mountPath: /opt/presto-server/etc/catalog/tpcds.properties
        - name: efs-pvc-fargate
          subPath: hive.properties
          mountPath: /tmp/hive.properties
        - name: efs-pvc-fargate
          subPath: log.properties
          mountPath: /opt/presto-server/etc/log.properties
        - name: efs-pvc-fargate
          subPath: password.db
          mountPath: /etc/password.db
        - name: efs-pvc-fargate
          subPath: password-authenticator.properties
          mountPath: /opt/presto-server/etc/password-authenticator.properties
        resources:
          requests:
            memory: "8G"
            cpu: 2
          limits:
            memory: "28G"
            cpu: 4
        imagePullPolicy: Always
      volumes:
        - name: efs-pvc-fargate
          persistentVolumeClaim:
            claimName: efs-storage-fargate-claim

---


apiVersion: apps/v1
kind: Deployment
metadata:
  name: presto-worker
  namespace: %namespace%
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: presto-worker
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: presto-worker
    spec:
      containers:
      - name: presto-worker
        image: %presto_image%
        volumeMounts:
        - name: efs-pvc-fargate
          mountPath: /opt/presto-server/etc/config.properties
          subPath: config.properties.worker
        - name: efs-pvc-fargate
          mountPath: /opt/presto-server/etc/jvm.config
          subPath: jvm.config.worker
        - name: efs-pvc-fargate
          subPath: tpcds.properties
          mountPath: /opt/presto-server/etc/catalog/tpcds.properties
        - name: efs-pvc-fargate
          subPath: hive.properties
          mountPath: /tmp/hive.properties
        - name: efs-pvc-fargate
          subPath: log.properties
          mountPath: /opt/presto-server/etc/log.properties
        - name: efs-pvc-fargate
          subPath: password.db
          mountPath: /etc/password.db
        - name: efs-pvc-fargate
          subPath: password-authenticator.properties
          mountPath: /opt/presto-server/etc/password-authenticator.properties
        resources:
          requests:
            memory: "8G"
            cpu: 2
          limits:
            memory: "32G"
            cpu: 8
        imagePullPolicy: Always
      volumes:
        - name: efs-pvc-fargate
          persistentVolumeClaim:
            claimName: efs-storage-fargate-claim
